--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,7 @@ small {
   text-align: center;
   margin-top: 10px;
 }
+
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -124,4 +125,7 @@ small {
   float: right;
   margin: 10px 20px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+.btn-group .active:hover {
+  cursor: default;
 }
