--- a/src/style.css
+++ b/src/style.css
@@ -25,22 +25,35 @@ div.card.capsule {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 h1 {
-  line-height: 20px;
+  line-height: 27px;
+  display: inline-block;
 }
 
 h2,
 h3 {
-  margin-top: 25px;
+  display: inline-block;
 }
 h2 {
+  margin-top: 61px;
   font-size: 50;
   font-weight: 400;
   line-height: 35px;
 }
 h3 {
+  margin-top: 15px;
   font-size: 25px;
   font-weight: 300;
   line-height: 35px;
+}
+
+h5 {
+  color: rgb(135, 135, 135);
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  height: 15px;
+  line-height: 15px;
+  padding-top: 7px;
 }
 p {
   margin-top: 85px;
@@ -108,17 +121,23 @@ small {
 
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
-.day {
-  font-weight: 600;
-  text-align: center;
+.weather-forcast {
+  display: inline-flex;
 }
-.weather-icon-future {
-  font-size: 35px;
-
-  color: #fbc02d;
+.weather-forecast img {
+  display: block;
+  margin: 0 auto;
+  height: 48px;
+  width: 48px;
 }
 .temp-high-low-future {
-  font-weight: normal;
+  text-align: center;
+  color: rgb(135, 135, 135);
+  font-size: 15px;
+  font-weight: 400;
+  height: auto;
+  line-height: 15px;
+  white-space: nowrap;
 }
 
 .btn-group {
