--- a/src/style.css
+++ b/src/style.css
@@ -8,10 +8,10 @@ div.card.capsule {
   margin: 0 auto;
   min-width: 540px;
   max-width: 700px;
-  background-image: linear-gradient(to top, #ffffff, #6dd5fa, #2980b9);
+  background-image: linear-gradient(to top, #ffffff, #4dd1e2, #15a3b8);
 
   background-blend-mode: normal, color-burn;
-  box-shadow: 5px 5px 10px rgba(41, 128, 185, 0.3);
+  box-shadow: 5px 5px 10px rgba(21, 163, 184, 0.3);
 }
 h1 {
   line-height: 27px;
@@ -62,17 +62,19 @@ small {
   max-width: 600px;
   margin: 30px auto;
 }
-.search.button{box-shadow: 5px 5px 10px rgba(41, 128, 185, 0.3);}
+.search.button {
+  box-shadow: 5px 5px 10px rgba(21, 163, 184, 0.3);
+}
 .search-city-current-location {
   float: right;
 }
 .current-location-button {
   background: transparent;
-  color:rgb(34, 38, 42);
+  color: rgb(34, 38, 42);
   border-style: none;
 }
 .fa-location-arrow {
-  color:rgb(34, 38, 42);
+  color: rgb(34, 38, 42);
 }
 .current-conditions {
   margin: 60px 5px;
@@ -100,11 +102,11 @@ small {
   font-weight: 400;
 }
 .week-ahead {
-  background: linear-gradient(to top, #ffffff, #6dd5fa, #2980b9);
+  background: linear-gradient(to top, #ffffff, #4dd1e2, #15a3b8);
   background-blend-mode: normal, color-burn;
   text-align: center;
 
-  box-shadow: 5px 5px 10px rgba(41, 128, 185, 0.3);
+  box-shadow: 5px 5px 10px rgba(21, 163, 184, 0.3);
 }
 .weather-forcast {
   display: inline-flex;
@@ -128,7 +130,7 @@ small {
 .btn-group {
   float: right;
   margin: 10px 20px;
-  box-shadow: 5px 5px 10px rgba(box-shadow: 5px 5px 10px rgba(41, 128, 185, 0.3);
+  box-shadow: 5px 5px 10px rgba(21, 163, 184, 0.3);
 }
 .btn-group .active:hover {
   cursor: default;
