--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 div.card.capsule {
-  color: #1b1c25;
+  color: #f2f2f1;
   margin: 0 auto;
   min-width: 540px;
   max-width: 700px;
@@ -20,24 +20,22 @@ h1 {
 
 h2,
 h3 {
-  color: rgb(34, 38, 42);
   display: inline-block;
 }
 h2 {
+  color: #f2f2f1;
   margin-top: 61px;
   font-size: 50;
   font-weight: 400;
   line-height: 35px;
 }
 h3 {
-  margin-top: 15px;
-  font-size: 25px;
-  font-weight: 300;
-  line-height: 35px;
+  font-size: 15px;
+  color: rgb(72, 72, 75);
 }
 
 h5 {
-  color: rgb(34, 38, 42);
+  color: #f2f2f1;
 
   font-size: 20px;
   font-weight: 400;
@@ -47,7 +45,7 @@ h5 {
   padding-top: 7px;
 }
 p {
-  color: rgb(34, 38, 42);
+  color: #f2f2f1;
   margin-top: 85px;
 }
 small {
@@ -70,23 +68,21 @@ small {
 }
 .current-location-button {
   background: transparent;
-  color: rgb(34, 38, 42);
+  color: rgb(72, 72, 75);
+
   border-style: none;
+  float: center;
+  transition: all 150ms ease;
 }
-.fa-location-arrow {
+.current-location-button:hover {
   color: rgb(34, 38, 42);
 }
+
 .current-conditions {
-  margin: 60px 5px;
+  margin: 25px 5px 35px 5px;
   text-align: center;
 }
-.weather-icon-today {
-  margin-bottom: 25px;
-  color: #fbc02d;
-  font-size: 125px;
 
-  float: left;
-}
 .condition-description {
   font-size: 28px;
   font-weight: 400;
@@ -131,6 +127,7 @@ small {
   float: right;
   margin: 10px 20px;
   box-shadow: 5px 5px 10px rgba(21, 163, 184, 0.3);
+  transition: all 300ms ease;
 }
 .btn-group .active:hover {
   cursor: default;
